Fix horizontal scroll for tables

--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@ body {
     width: 1280px;
     margin-top: 72px;
     padding: 24px;
+    overflow-x: hidden
 }
 
 a {
